; ModuleID = '/home/carl/AnghaBench/freebsd/sys/ofed/drivers/infiniband/core/extr_ib_mad_rmpp.c_ack_recv.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/ofed/drivers/infiniband/core/extr_ib_mad_rmpp.c_ack_recv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mad_rmpp_recv = type { i32, %struct.TYPE_6__* }
%struct.TYPE_6__ = type { i32 }
%struct.ib_mad_recv_wc = type { %struct.TYPE_8__, %struct.TYPE_7__* }
%struct.TYPE_8__ = type { %struct.TYPE_10__* }
%struct.TYPE_10__ = type { %struct.TYPE_9__ }
%struct.TYPE_9__ = type { i32 }
%struct.TYPE_7__ = type { i32, i32 }
%struct.ib_mad_send_buf = type { i32 }
%struct.ib_rmpp_mad = type { i32 }

@GFP_KERNEL = common dso_local global i32 0, align 4
@IB_MGMT_BASE_VERSION = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mad_rmpp_recv*, %struct.ib_mad_recv_wc*)* @ack_recv to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ack_recv(%struct.mad_rmpp_recv* %0, %struct.ib_mad_recv_wc* %1) #0 {
  %3 = alloca %struct.mad_rmpp_recv*, align 8
  %4 = alloca %struct.ib_mad_recv_wc*, align 8
  %5 = alloca %struct.ib_mad_send_buf*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.mad_rmpp_recv* %0, %struct.mad_rmpp_recv** %3, align 8
  store %struct.ib_mad_recv_wc* %1, %struct.ib_mad_recv_wc** %4, align 8
  %8 = load %struct.ib_mad_recv_wc*, %struct.ib_mad_recv_wc** %4, align 8
  %9 = getelementptr inbounds %struct.ib_mad_recv_wc, %struct.ib_mad_recv_wc* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %9, i32 0, i32 0
  %11 = load %struct.TYPE_10__*, %struct.TYPE_10__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @ib_get_mad_data_offset(i32 %14)
  store i32 %15, i32* %7, align 4
  %16 = load %struct.mad_rmpp_recv*, %struct.mad_rmpp_recv** %3, align 8
  %17 = getelementptr inbounds %struct.mad_rmpp_recv, %struct.mad_rmpp_recv* %16, i32 0, i32 1
  %18 = load %struct.TYPE_6__*, %struct.TYPE_6__** %17, align 8
  %19 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %18, i32 0, i32 0
  %20 = load %struct.ib_mad_recv_wc*, %struct.ib_mad_recv_wc** %4, align 8
  %21 = getelementptr inbounds %struct.ib_mad_recv_wc, %struct.ib_mad_recv_wc* %20, i32 0, i32 1
  %22 = load %struct.TYPE_7__*, %struct.TYPE_7__** %21, align 8
  %23 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %22, i32 0, i32 1
  %24 = load i32, i32* %23, align 4
  %25 = load %struct.ib_mad_recv_wc*, %struct.ib_mad_recv_wc** %4, align 8
  %26 = getelementptr inbounds %struct.ib_mad_recv_wc, %struct.ib_mad_recv_wc* %25, i32 0, i32 1
  %27 = load %struct.TYPE_7__*, %struct.TYPE_7__** %26, align 8
  %28 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = load i32, i32* %7, align 4
  %31 = load i32, i32* @GFP_KERNEL, align 4
  %32 = load i32, i32* @IB_MGMT_BASE_VERSION, align 4
  %33 = call %struct.ib_mad_send_buf* @ib_create_send_mad(i32* %19, i32 %24, i32 %29, i32 1, i32 %30, i32 0, i32 %31, i32 %32)
  store %struct.ib_mad_send_buf* %33, %struct.ib_mad_send_buf** %5, align 8
  %34 = load %struct.ib_mad_send_buf*, %struct.ib_mad_send_buf** %5, align 8
  %35 = call i64 @IS_ERR(%struct.ib_mad_send_buf* %34)
  %36 = icmp ne i64 %35, 0
  br i1 %36, label %37, label %38

37:                                               ; preds = %2
  br label %59

38:                                               ; preds = %2
  %39 = load %struct.ib_mad_send_buf*, %struct.ib_mad_send_buf** %5, align 8
  %40 = load %struct.ib_mad_recv_wc*, %struct.ib_mad_recv_wc** %4, align 8
  %41 = getelementptr inbounds %struct.ib_mad_recv_wc, %struct.ib_mad_recv_wc* %40, i32 0, i32 0
  %42 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %41, i32 0, i32 0
  %43 = load %struct.TYPE_10__*, %struct.TYPE_10__** %42, align 8
  %44 = bitcast %struct.TYPE_10__* %43 to %struct.ib_rmpp_mad*
  %45 = load %struct.mad_rmpp_recv*, %struct.mad_rmpp_recv** %3, align 8
  %46 = call i32 @format_ack(%struct.ib_mad_send_buf* %39, %struct.ib_rmpp_mad* %44, %struct.mad_rmpp_recv* %45)
  %47 = load %struct.mad_rmpp_recv*, %struct.mad_rmpp_recv** %3, align 8
  %48 = getelementptr inbounds %struct.mad_rmpp_recv, %struct.mad_rmpp_recv* %47, i32 0, i32 0
  %49 = load i32, i32* %48, align 8
  %50 = load %struct.ib_mad_send_buf*, %struct.ib_mad_send_buf** %5, align 8
  %51 = getelementptr inbounds %struct.ib_mad_send_buf, %struct.ib_mad_send_buf* %50, i32 0, i32 0
  store i32 %49, i32* %51, align 4
  %52 = load %struct.ib_mad_send_buf*, %struct.ib_mad_send_buf** %5, align 8
  %53 = call i32 @ib_post_send_mad(%struct.ib_mad_send_buf* %52, i32* null)
  store i32 %53, i32* %6, align 4
  %54 = load i32, i32* %6, align 4
  %55 = icmp ne i32 %54, 0
  br i1 %55, label %56, label %59

56:                                               ; preds = %38
  %57 = load %struct.ib_mad_send_buf*, %struct.ib_mad_send_buf** %5, align 8
  %58 = call i32 @ib_free_send_mad(%struct.ib_mad_send_buf* %57)
  br label %59

59:                                               ; preds = %37, %56, %38
  ret void
}

declare dso_local i32 @ib_get_mad_data_offset(i32) #1

declare dso_local %struct.ib_mad_send_buf* @ib_create_send_mad(i32*, i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i64 @IS_ERR(%struct.ib_mad_send_buf*) #1

declare dso_local i32 @format_ack(%struct.ib_mad_send_buf*, %struct.ib_rmpp_mad*, %struct.mad_rmpp_recv*) #1

declare dso_local i32 @ib_post_send_mad(%struct.ib_mad_send_buf*, i32*) #1

declare dso_local i32 @ib_free_send_mad(%struct.ib_mad_send_buf*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
